# bevy-websocket-adapter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
examples/: README.md  bevy_client.rs  bevy_network_events.rs  bevy_ping_pong.rs  bevy_server.rs
src/: lib.rs
src/bevy/: mod.rs  plugin.rs  plugin_client.rs  plugin_server.rs  shared.rs
src/client/: mod.rs  ws_client.rs
src/server/: mod.rs  router.rs  server.rs  ws_handler.rs
src/shared/: event.rs  handle.rs  mod.rs
test/: test.py
